src/LinkAPI.h



#    define LINKAPI_MAX_IDENTITY_LENGTH 256
#    define LINKAPI_MAX_CONTEXT_LENGTH 256
#    define LINKAPI_MAX_NAME_LENGTH 256
#    define LINKAPI_MAX_DESCRIPTION_LENGTH 2048

#    define LINKAPI_UI_VERSION_UNLINK 0

	/**
	 * the structure of the shared memory as defined by mumble Link plugin v1.2.0
	 */
	typedef struct LINKAPI_LINKED_MEMORY {
		LINKAPI_NATIVE_UINT32 version;
		LINKAPI_NATIVE_DWORD tick;
		float avatarPosition[3];
		float avatarFront[3];
		float avatarTop[3];
		wchar_t name[LINKAPI_MAX_NAME_LENGTH];
		float cameraPosition[3];
		float cameraFront[3];
		float cameraTop[3];
		wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH];
		LINKAPI_NATIVE_UINT32 context_len;
		unsigned char context[LINKAPI_MAX_CONTEXT_LENGTH];
		wchar_t description[LINKAPI_MAX_DESCRIPTION_LENGTH];
	} LINKAPI_LINKED_MEMORY;


	/**
	 * error codes hinting at the root cause of a failure
	 */
	typedef enum LINKAPI_ERROR_CODE {
		/** no error */
		LINKAPI_ERROR_CODE_NO_ERROR = 0,
		/** no handle to the shared memory structure was received */
		LINKAPI_ERROR_CODE_NO_HANDLE = 1,
		/** no structure could be initialized */
		LINKAPI_ERROR_CODE_NO_STRUCTURE = 2,
		/** the shared memory was not initialized */
		LINKAPI_ERROR_CODE_NO_MEMORY_WAS_INITIALIZED = 3,
		/** the provided context length was out of bounds */
		LINKAPI_ERROR_CODE_CONTEXT_LENGTH_EXCEEDED = 4
	} LINKAPI_ERROR_CODE;


	/**
	 * initialize the linked memory
	 * and set the name and description
	 *
	 * it corresponds to initMumble() defined here: http://mumble.sourceforge.net/Link
	 * but also sets the name and description as this should only needed to be
	 * set once
	 *
	 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
	 * @param description	a text stating the purpose of this link
	 * @param version	no description available (this should usually be set to 2)
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE initialize(wchar_t name[LINKAPI_MAX_NAME_LENGTH],
			wchar_t description[LINKAPI_MAX_DESCRIPTION_LENGTH],
			LINKAPI_NATIVE_UINT32 uiVersion);


	/**
	 * forcefully unlinks the plugin instantly
	 *
	 * this function directly circumvents the timeout wait of the link plugin
	 *
	 * this effect is undone when calling a commit...(...)-function or
	 * <code>initialize(...)</code>
	 */
	LINKAPI_API
	void unlinkMumble();


	/**
	 * Notifies the plugin that the data is up-to-date. commit...(...)-functions
	 * call this method at the end.
	 *
	 * This is to prevent a timeout which causes the plugin to automatically unlink.
	 * It will also re-link if the link has previously been lost ("relock").
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commit();


	/**
	 * sets and commits the identity
	 *
	 * Notice: The identity does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 *      see <code>setIdentity(...)</code> for details
	 *
	 * @param identity	unique id of the user in a given context
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitIdentity(wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH]);


	/**
	 * get the client's identity
	 *      see <code>setIdentity(...)</code> for details
	 * @return the client's identity
	 */
	LINKAPI_API
	wchar_t* getIdentity();


	/**
	 * set the identity only
	 *
	 * Notice: The identity does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 * Identity should contain a string which uniquely identifies the player in
	 * the given context. This is usually satisfied by the in-game player name
	 * or the players ID (player-/connection-ID on the server or a global ID).
	 *
	 * Additionally the identity can contain any additional information about
	 * the player that might be interesting for the mumble server.
	 *
	 * We recommend using an easily parseable format like JSON or CSV for
	 * encoding the information but this is up to the game. Remember that the
	 * link structures only allow for limited characters of identity data.
	 *
	 * @param identity	unique id of the user in a given context
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setIdentity(wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH]);


	/**
	 * sets and commits the context
	 *
	 * Notice: The context does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 *      see <code>setContext(...)</code> for details
	 *
	 * @param context	a generic context
	 * @param context_len	the length of the context (number of array elements)
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitContext(
			unsigned char context[LINKAPI_MAX_CONTEXT_LENGTH],
			LINKAPI_NATIVE_UINT32 context_len);


	/**
	 * the length of the context (number of valid array elements retrieved).
	 *
	 * This cannot exceed <code>LINKAPI_MAX_CONTEXT_LENGTH</code>.
	 *
	 * @return the length of the current context
	 */
	LINKAPI_API
	LINKAPI_NATIVE_UINT32 getContextLen();


	/**
	 * getter for the client's context
	 *      see <code>setContext(...)</code> for details
	 *
	 * @return the client's context
	 */
	LINKAPI_API
	unsigned char * getContext();


	/**
	 * sets the context
	 *
	 * Notice: The context does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 * The context string is used to determine which users on a Mumble server
	 * should hear each other positionally. If context between two mumble user
	 * does not match the positional audio data is stripped server-side and
	 * voice will be received as non-positional.
	 *
	 * Accordingly the context should only match for players on the same server
	 * in the same game on the same map. Whether to include things like team in
	 * this string depends on the game itself. When in doubt err on the side of
	 * including less. This gives more flexibility later on.
	 *
	 * @param context	a generic context
	 * @param context_len	the length of the context (number of active array elements)
	 *                          LINKAPI_MAX_CONTEXT_LENGTH limits this number
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setContext(
			unsigned char context[],
			LINKAPI_NATIVE_UINT32 context_len);