tests/java/src/zsawyer/mumble/bridj/LinkAPILibrary.java

package zsawyer.mumble.bridj;

import java.util.Collections;
import java.util.Iterator;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.FlagSet;
import org.bridj.IntValuedEnum;
import org.bridj.Pointer;
import org.bridj.StructObject;
import org.bridj.ann.Array;
import org.bridj.ann.Field;
import org.bridj.ann.Library;
import org.bridj.ann.Runtime;

/**
 * Wrapper for library <b>LinkAPI</b><br>
 * This file was autogenerated by <a
 * href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a
 * href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few
 * opensource projects.</a>.<br>
 * For help, please visit <a
 * href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a
 * href="http://bridj.googlecode.com/">BridJ</a> .
 *
 *
 * The wrapped library is a generic interface to provide positional audio
 * information to mumble which depends on the "Mumble Link Plugin" ("Link")
 * v1.2.0
 *
 * Note that all update...(...) methods will increment uiTick and reinitialize
 * the memory structure if the lock was lost (unlinked).
 *
 * CONCURRENCY WARNING:
 * All methods are non-synchronized! Race conditions are likely to happen.
 * Especially when calling getters in sequence, data writes to the shared memory
 * can happen in between the read sequence.
 * DO NOT rely upon a sequence of functions to work on the same "uiTick".
 * Currently the memory does not provide the means to synchronize and ensure
 * that all data are coherently relating to the same tick/each other.
 * The context_len is not guaranteed to belong to the context retrieved
 * immediately before or after thereof.
 *
 *
 * For more information about the different data that can be updated see
 * http://mumble.sourceforge.net/Link
 *
 *
 * @author cleaned up by zsawyer, 2013
 */
@Library("LinkAPI")
@Runtime(CRuntime.class)
public class LinkAPILibrary {

	static {
		BridJ.addNativeLibraryAlias("LinkAPI", "libLinkAPI");
		BridJ.addNativeLibraryAlias("LinkAPI", "LinkAPI64");
		BridJ.addNativeLibraryAlias("LinkAPI", "libLinkAPI64");
		BridJ.register();
	}

	/**
	 * error codes hinting at the root cause of a failure
	 */
	public enum LINKAPI_ERROR_CODE implements IntValuedEnum<LINKAPI_ERROR_CODE> {

		/** no error */
		LINKAPI_ERROR_CODE_NO_ERROR(0),
		/** win32 specific: OpenFileMappingW failed to return a handle */
		LINKAPI_ERROR_CODE_WIN32_NO_HANDLE(1),
		/** win32 specific: MapViewOfFile failed to return a structure */
		LINKAPI_ERROR_CODE_WIN32_NO_STRUCTURE(2),
		/** unix specific: shm_open returned a negative integer */
		LINKAPI_ERROR_CODE_UNIX_NO_HANDLE(3),
		/** unix specific: mmap failed to return a structure */
		LINKAPI_ERROR_CODE_UNIX_NO_STRUCTURE(4),
		/** shared memory was not initialized */
		LINKAPI_ERROR_CODE_NO_MEMORY_WAS_INITIALIZED(5),
		/** the provided context length was out of bounds */
		LINKAPI_ERROR_CODE_CONTEXT_LENGTH_EXCEEDED(6);

		LINKAPI_ERROR_CODE(long value) {
			this.value = value;
		}
		public final long value;

		public long value() {
			return this.value;
		}

		public Iterator<LINKAPI_ERROR_CODE> iterator() {
			return Collections.singleton(this).iterator();
		}

		public static IntValuedEnum<LINKAPI_ERROR_CODE> fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public static final int LINKAPI_MAX_IDENTITY_LENGTH = 256;
	public static final int LINKAPI_MAX_NAME_LENGTH = 256;
	public static final int LINKAPI_MAX_CONTEXT_LENGTH = 256;
	public static final int LINKAPI_VECTOR_LENGTH = 3;
	public static final int LINKAPI_UI_VERSION_UNLINK = 0;
	public static final int LINKAPI_MAX_DESCRIPTION_LENGTH = 2048;

	public static class LINKAPI_LINKED_MEMORY extends StructObject {

		@Field(0)
		public int uiVersion() {
			return this.io.getIntField(this, 0);
		}

		@Field(0)
		public LINKAPI_LINKED_MEMORY uiVersion(int uiVersion) {
			this.io.setIntField(this, 0, uiVersion);
			return this;
		}

		@Field(1)
		public int uiTick() {
			return this.io.getIntField(this, 1);
		}

		@Field(1)
		public LINKAPI_LINKED_MEMORY uiTick(int uiTick) {
			this.io.setIntField(this, 1, uiTick);
			return this;
		}

		/** C type : float[3] */
		@Array({3})
		@Field(2)
		public Pointer<Float> fAvatarPosition() {
			return this.io.getPointerField(this, 2);
		}

		/** C type : float[3] */
		@Array({3})
		@Field(3)
		public Pointer<Float> fAvatarFront() {
			return this.io.getPointerField(this, 3);
		}

		/** C type : float[3] */
		@Array({3})
		@Field(4)
		public Pointer<Float> fAvatarTop() {
			return this.io.getPointerField(this, 4);
		}

		/** C type : wchar_t[256] */
		@Array({256})
		@Field(5)
		public Pointer<Character> name() {
			return this.io.getPointerField(this, 5);
		}

		/** C type : float[3] */
		@Array({3})
		@Field(6)
		public Pointer<Float> fCameraPosition() {
			return this.io.getPointerField(this, 6);
		}

		/** C type : float[3] */
		@Array({3})
		@Field(7)
		public Pointer<Float> fCameraFront() {
			return this.io.getPointerField(this, 7);
		}

		/** C type : float[3] */
		@Array({3})
		@Field(8)
		public Pointer<Float> fCameraTop() {
			return this.io.getPointerField(this, 8);
		}

		/** C type : wchar_t[256] */
		@Array({256})
		@Field(9)
		public Pointer<Character> identity() {
			return this.io.getPointerField(this, 9);
		}

		@Field(10)
		public int context_len() {
			return this.io.getIntField(this, 10);
		}

		@Field(10)
		public LINKAPI_LINKED_MEMORY context_len(int context_len) {
			this.io.setIntField(this, 10, context_len);
			return this;
		}

		/** C type : unsigned char[256] */
		@Array({256})
		@Field(11)
		public Pointer<Byte> context() {
			return this.io.getPointerField(this, 11);
		}

		/** C type : wchar_t[2048] */
		@Array({2048})
		@Field(12)
		public Pointer<Character> description() {
			return this.io.getPointerField(this, 12);
		}

		public LINKAPI_LINKED_MEMORY() {
			super();
		}

		public LINKAPI_LINKED_MEMORY(Pointer pointer) {
			super(pointer);
		}
	};

	/**
	 * initialize the linked memory
	 * and set the name and description
	 *
	 * it corresponds to initMumble() defined here:
	 * http://mumble.sourceforge.net/Link
	 * but also sets the name and description as this should only needed to be
	 * set once
	 *
	 * @param name	       the display name of the application which links with
	 *                       mumble (i.e. L"TestLink")
	 * @param description	a text stating the purpose of this link
	 * @param uiVersion	  no description available (this should usually be set
	 *                       to 2)
	 *
	 * @return	an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE initialize(wchar_t[256], wchar_t[2048], int)</code><br>
	 * <i>native declaration : line 156</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> initialize(
			Pointer<Character> name, Pointer<Character> description,
			int uiVersion);

	/**
	 * forcefully unlinks the plugin instantly
	 *
	 * this function directly circumvents the timeout wait of the link plugin
	 *
	 * this effect is undone when calling a commit...(...)-method or
	 * {@link #initialize(org.bridj.Pointer, org.bridj.Pointer, int)}
	 */
	/*
	 * Original signature :
	 * <code>void unlinkMumble()</code><br>
	 * <i>native declaration : line 168</i>
	 */
	native public static void unlinkMumble();

	/**
	 * Notifies the plugin that the data is up-to-date. commit...(...)-functions
	 * call this method at the end.
	 *
	 * This is to prevent a timeout which causes the plugin to automatically
	 * unlink.
	 * It will also re-link if the link has previously been lost ("relock").
	 *
	 * @return	an error code, see {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commit()</code><br>
	 * <i>native declaration : line 180</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commit();

	/**
	 * sets and commits the identity
	 *
	 * Notice: The identity does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a
	 * game.
	 *
	 * see {@link #setIdentity(org.bridj.Pointer) } for details
	 *
	 * @param identity	unique id of the user in a given context
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 *
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitIdentity(wchar_t[256])</code><br>
	 * <i>native declaration : line 195</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitIdentity(
			Pointer<Character> identity);

	/**
	 * get the client's identity
	 *
	 * see {@link #setIdentity(org.bridj.Pointer) } for details
	 *
	 * @return the client's identity
	 */
	/*
	 * Original signature :
	 * <code>wchar_t* getIdentity()</code><br>
	 * <i>native declaration : line 203</i>
	 */
	native public static Pointer<Character> getIdentity();

	/**
	 * set the identity only
	 *
	 * Notice: The identity does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a
	 * game.
	 *
	 * Identity should contain a string which uniquely identifies the player in
	 * the given context. This is usually satisfied by the in-game player name
	 * or the players ID (player-/connection-ID on the server or a global ID).
	 *
	 * Additionally the identity can contain any additional information about
	 * the player that might be interesting for the mumble server.
	 *
	 * We recommend using an easily parseable format like JSON or CSV for
	 * encoding the information but this is up to the game. Remember that the
	 * link structures only allow for limited characters of identity data.
	 *
	 * @param identity	unique id of the user in a given context
	 *
	 * @return	an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setIdentity(wchar_t[256])</code><br>
	 * <i>native declaration : line 227</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setIdentity(
			Pointer<Character> identity);

	/**
	 * sets and commits the context
	 *
	 * Notice: The context does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a
	 * game.
	 *
	 * see {@link #setContext(org.bridj.Pointer, int) } for details
	 *
	 * @param context	    a generic context
	 * @param context_len	the length of the context (number of array elements)
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitContext(unsigned char[256], int)</code><br>
	 * <i>native declaration : line 243</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitContext(
			Pointer<Byte> context, int context_len);

	/**
	 * the length of the context (number of valid array elements retrieved).
	 *
	 * This cannot exceed {@link #LINKAPI_MAX_CONTEXT_LENGTH}.
	 *
	 * @return the length of the current context
	 */
	/*
	 * Original signature :
	 * <code>int getContextLen()</code><br>
	 * <i>native declaration : line 254</i>
	 */
	native public static int getContextLen();

	/**
	 * getter for the client's context
	 *
	 * see {@link #setContext(java.nio.ByteBuffer, int) } for details
	 *
	 * @return the client's context
	 */
	/*
	 * Original signature :
	 * <code>char* getContext()</code><br>
	 * <i>native declaration : line 263</i>
	 */
	native public static Pointer<Byte> getContext();
